<resources>
    <string name="app_name">WhatToDo?</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome Back!</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="design">UI design items</string>
    <string name="forget_password">Forgot your Password?</string>
    <string name="signup_google">Sign Up with Google</string>
    <string name="signup_facebook">Sign Up with Facebook</string>
    <string name="login_new_user">Are you a new user? Register!</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="help_header">Help Header</string>
    <string name="help_search">Need Some Help?</string>
    <string name="help_search_placeholder">Search Something</string>
    <string name="faq">Frequently Asked Questions</string>
    <string name="faq1_header">How can I search for a specific task?</string>
    <string name="faq1_content">Use the app\'s search feature to find specific tasks by entering relevant keywords. The app will filter and display matching tasks.</string>
    <string name="faq2_header">How do I create a new task?</string>
    <string name="faq2_content">Click "New Task" or the "+" icon, fill in task details, and click "Save" to create a new task.</string>
    <string name="faq3_header">How do I share this app with friends?</string>
    <string name="faq3_content">Simply go to navigation menu and choose the share option item.</string>
    <string name="ppolicy_header">Privacy Policy</string>
    <string name="ppolicy_intro">We want you to know exactly how TaskPro services work and why we need your details. Reviewing our policy will help you to continue using the app with peace of mind.</string>
    <string name="view_more">View more about specific privacy policy</string>
    <string name="ppolicy1">What information do we collect about you?</string>
    <string name="ppolicy2">How do we use your information?</string>
    <string name="ppolicy3">To whom do we disclose your information?</string>
    <string name="ppolicy4">What do we do to keep your information secure?</string>
    <string name="ppolicy5">Cookies, beacons and Geo-tracking.</string>
    <string name="settings_header">Settings</string>
    <string name="settings_language">Choose Language</string>
    <string name="settings_dark_mode">Dark Mode</string>
    <string name="settings_accounts">Accounts</string>
    <string name="settings_security">Privacy &amp; Security</string>
    <string name="settings_help_support">Help &amp; Support</string>
    <string name="settings_about">About</string>
    <string name="account_header">Account</string>
    <string name="default_notification_channel_id">channel_id</string>
    <string name="default_notification_channel_name">Notifications</string>
    <string name="add_task_button">Add Task Floating Action Button (FAB)</string>


    <!--    <string name="app_name">Clock</string>-->


    <string name="stop_watch">Stopwatch</string>
    <string name="timer">Timer</string>

    <string name="seconds">Seconds</string>
    <string name="minutes">Minutes</string>
    <string name="hours">Hours</string>

    <string name="timeIsUP">Time is up</string>


    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="resume">Resume</string>
    <string name="reset">Reset</string>


    <string-array name="grades_array">
        <item>A+</item>
        <item>A</item>
        <item>A-</item>
        <item>B+</item>
        <item>B</item>
        <item>B-</item>
        <item>C</item>
        <item>D</item>
    </string-array>
    <string-array name="semester_array">
        <item>1-1</item>
        <item>1-2</item>
        <item>2-1</item>
        <item>2-2</item>
        <item>3-1</item>
        <item>3-2</item>
        <item>4-1</item>
        <item>4-2</item>
    </string-array>
    <string name="wrongInputForTimer">Please enter appropriate values !!</string>


</resources>