<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/nav_home"
            android:title="Home">
        </item>
<!--        <item-->
<!--            android:id="@+id/nav_settings"-->
<!--            android:icon="@drawable/nav_settings"-->
<!--            android:title="Settings">-->
<!--        </item>-->
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/nav_share"
            android:title="Share App">
        </item>
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/nav_help"
            android:title="Help">
        </item>
    </group>

    <item
        android:title="">
        <menu>
            <item
                android:id="@+id/nav_account"
                android:icon="@drawable/nav_account"
                android:title="Account"/>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/nav_about"
                android:title="About Us"/>
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/nav_contact"
                android:title="Contact Us"/>
            <item
                android:id="@+id/nav_privacy"
                android:icon="@drawable/nav_privacypolicy"
                android:title="Privacy Policy"/>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/nav_logout"
                android:title="Logout"/>

        </menu>

    </item>

</menu>